--- a/package.json
+++ b/package.json
@@ -12,11 +12,19 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
+    "@nuxtjs/supabase": "^2.0.1",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@supabase/supabase-js": "^2.75.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "nuxt": "^4.1.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1",
+    "xlsx": "^0.18.5",
     "youch": "^4.1.0-beta.11",
     "youch-terminal": "^2.2.3"
+  },
+  "devDependencies": {
+    "@types/node": "^24.7.2"
   }
 }
