--- a/package.json
+++ b/package.json
@@ -7,53 +7,47 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "dependencies": {
-    "@headlessui/vue": "^1.7.23",
-    "@heroicons/vue": "^2.2.0",
-    "@nuxtjs/supabase": "^2.0.1",
-    "@nuxtjs/tailwindcss": "^6.14.0",
-    "@supabase/supabase-js": "^2.75.0",
-    "jspdf": "^3.0.3",
-    "jspdf-autotable": "^5.0.2",
-    "nuxt": "^4.1.3",
-    "vue": "^3.5.22",
-    "vue-router": "^4.5.1",
-    "xlsx": "^0.18.5",
-    "youch": "^4.1.0-beta.11",
-    "youch-terminal": "^2.2.3",
-    "@pinia/nuxt": "^0.6.0",
-    "@vueuse/nuxt": "^11.0.0",
-    "chart.js": "^4.4.0",
-    "vue-chartjs": "^5.3.0",
-    "date-fns": "^3.6.0",
-    "zod": "^3.22.4",
-    "@vite-pwa/nuxt": "^0.10.0",
-    "socket.io-client": "^4.7.3",
-    "dexie": "^4.0.0",
-    "lodash-es": "^4.17.21"
-  },
-  "devDependencies": {
-    "@types/node": "^24.7.2",
-    "@nuxt/test-utils": "^3.14.0",
-    "vitest": "^2.0.0",
-    "@nuxt/eslint-config": "^0.5.0",
-    "eslint": "^9.0.0",
-    "playwright": "^1.47.0",
-    "@types/lodash-es": "^4.17.12",
-    "happy-dom": "^15.0.0"
-  },
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint . --ext .vue,.ts,.js",
     "lint:fix": "eslint . --ext .vue,.ts,.js --fix",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "test:e2e": "playwright test"
+  },
+  "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
+    "@nuxtjs/supabase": "^2.0.1",
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@pinia/nuxt": "^0.6.0",
+    "@supabase/supabase-js": "^2.75.0",
+    "@vite-pwa/nuxt": "^0.10.0",
+    "@vueuse/nuxt": "^11.0.0",
+    "chart.js": "^4.4.0",
+    "date-fns": "^3.6.0",
+    "dexie": "^4.0.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
+    "lodash-es": "^4.17.21",
+    "nuxt": "^4.1.3",
+    "qrcode-terminal": "^0.12.0",
+    "socket.io-client": "^4.7.3",
+    "vue": "^3.5.22",
+    "vue-chartjs": "^5.3.0",
+    "vue-router": "^4.5.1",
+    "xlsx": "^0.18.5",
+    "youch": "^4.1.0-beta.11",
+    "youch-terminal": "^2.2.3",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@nuxt/eslint-config": "^0.5.0",
+    "@nuxt/test-utils": "^3.14.0",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^24.7.2",
+    "eslint": "^9.0.0",
+    "happy-dom": "^15.0.0",
+    "playwright": "^1.47.0",
+    "vitest": "^2.0.0"
   }
 }
