--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "@pinia/nuxt": "^0.6.0",
     "@supabase/supabase-js": "^2.75.0",
     "@vite-pwa/nuxt": "^0.10.0",
-    "@vueuse/nuxt": "^11.0.0",
+    "@vueuse/core": "^11.0.0",
     "chart.js": "^4.4.0",
     "date-fns": "^3.6.0",
     "dexie": "^4.0.0",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lodash-es": "^4.17.21",
-    "nuxt": "^4.1.3",
+    "nuxt": "^3.14.1592",
     "qrcode-terminal": "^0.12.0",
     "socket.io-client": "^4.7.3",
     "vue": "^3.5.22",
